--- a/MazeServer/server/client/assets/style.css
+++ b/MazeServer/server/client/assets/style.css
@@ -7,13 +7,32 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 20px); /* Subtract 20px for top/bottom margin */
+    position: relative;
+ 
 }
 
 #ctx {
 
     background-color: white;
-    border:2px solid red;
-    margin: 10px;
+    border:4px solid red;
 
+
+}
+#button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.button {
+    margin-top: 30px;
+}
+
+#demotag{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    color:white;
 }
