--- a/MazeServer/server/client/assets/style.css
+++ b/MazeServer/server/client/assets/style.css
@@ -18,7 +18,7 @@ body {
 
 
 }
-#button-container {
+.button-container {
     display: flex;
     justify-content: center;
     align-items: center;
